--- a/src/Hangfire.EntityFramework/ErrorStrings.resx
+++ b/src/Hangfire.EntityFramework/ErrorStrings.resx
@@ -117,14 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CannotRetrieveQueueProviderForQueue" xml:space="preserve">
+    <value>Cannot retrieve provider instances registered for the folowing queues: {0}.</value>
+  </data>
   <data name="LockTimedOutOnResource" xml:space="preserve">
     <value>Could not place a lock on the resource {0}. Lock timed out.</value>
+  </data>
+  <data name="MultipleQueueProvidersNotSupported" xml:space="preserve">
+    <value>Multiple provider instances registered for the folowing queues: {0}. You should choose only one type of persistent queues per server instance.</value>
   </data>
   <data name="NeedNonNegativeValue" xml:space="preserve">
     <value>Non-negative value required.</value>
   </data>
   <data name="NeedPositiveValue" xml:space="preserve">
     <value>Non-negative value required.</value>
+  </data>
+  <data name="QueuesCannotBeEmpty" xml:space="preserve">
+    <value>Queues cannot be empty.</value>
   </data>
   <data name="StringCannotBeEmpty" xml:space="preserve">
     <value>String cannot be empty.</value>
